<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MenuActivity">

    <include
        android:id="@+id/top"
        layout="@layout/tool_bar_layout"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:paddingStart="24dp"
        android:paddingEnd="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/menu_btn_home"
                style="@style/MenuButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lb_home"
                android:textAllCaps="true"
                app:icon="@drawable/home" />

            <Button
                android:id="@+id/menu_btn_register"
                style="@style/MenuButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textAllCaps="true"
                app:icon="@drawable/register" />

            <Button
                android:id="@+id/menu_btn_logout"
                style="@style/MenuButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textAllCaps="true"
                app:icon="@drawable/logout" />

            <TextView
                android:id="@+id/tv_contact_suggestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textAppearance="@style/ContactSuggestion" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/social_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/divider"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="7dp"
                android:src="@drawable/instagram" />

            <ImageView
                android:id="@+id/iv_twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="7dp"
                android:src="@drawable/twitter" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="7dp"
                android:src="@drawable/google_plus" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="7dp"
                android:src="@drawable/blogger" />

            <ImageView
                android:id="@+id/iv_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="7dp"
                android:src="@drawable/facebook" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="7dp"
                android:src="@drawable/pinterest" />
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1.2dp"
            android:layout_above="@id/tv_contact_address"
            android:layout_marginHorizontal="23dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="20dp"
            android:background="#D8D8D8" />

        <TextView
            android:id="@+id/tv_contact_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="14dp"
            android:gravity="center"
            android:text="@string/contact_email"
            android:textAppearance="@style/ContactAddress" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>